--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,37 +10,15 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v1
 
-    - name: Get APIC Toolkit
-      env:
-        MANAGER_HOST: manager.${{ secrets.host_suffix}}
-      run: |
-        curl -LO https://${MANAGER_HOST}/client-downloads/toolkit-linux.tgz
-        tar -vzxf toolkit-linux.tgz
-        ls -l
-        chmod a+x apic-slim
-
     - name: Get IAM token
       env:
-        API_KEY: ${{ secrets.api_key }}
-        API_HOST: api.${{ secrets.host_suffix}}
+        API_KEY: ${{ secrets.APICHOST }}
+        API_HOST: api.${{ secrets.APICHOST}}
       run: |
         mkdir ~/.apiconnect/
         touch ~/.apiconnect/token
-        ACCESS_TOKEN=$(curl -s "https://iam.cloud.ibm.com/identity/token" -H 'Content-Type: application/x-www-form-urlencoded' -H 'Accept: application/json' --data "grant_type=urn:ibm:params:oauth:grant-type:apikey&apikey=$API_KEY" | jq .access_token -r)
-        echo "${API_HOST}/api: |
+        TOKEN=$(curl -sk "https://$API_HOST/api/cloud/provider/identity-providers" -H 'Accept: application/json' -H 'Content-Type: application/json' | jq '.results | .[] | .realm');
+       
+          echo "${API_HOST}/api: |
                 refresh_token: \"\"
-                access_token: ${ACCESS_TOKEN}" > ~/.apiconnect/token 
-
-    - name: List orgs with apic CLI
-      env:
-        API_HOST: api.${{ secrets.host_suffix}}
-      run: |
-        ./apic-slim orgs --accept-license --live-help --my --server ${API_HOST}
-
-    - name: Publlish product with apic CLI
-      env:
-        API_HOST: api.${{ secrets.host_suffix}}
-        ORG_NAME: 'test-porg'
-        CATALOG_NAME: 'automation'
-      run: |
-        ./apic-slim products:publish --server ${API_HOST} --org ${ORG_NAME} --catalog ${CATALOG_NAME} product.yaml
+                access_token: ${TOKEN}" > ~/.apiconnect/token 
