--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,4 @@ jobs:
           echo "${API_HOST}/api: |
                 refresh_token: \"\"
                 access_token: ${TOKEN}" > ~/.apiconnect/token 
+          echo "Token : ${TOKEN} from apic: ${API_HOST}" 
