--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ jobs:
         jq '. + {"x-ibm-configuration":{"type": "rest", "phase": "realized", "enforced": false, "testable": true, "cors": {"enabled": true}}}' $value | jq ' .info |= . + {"x-ibm-name":"'$apiname'"}'> $apifile
         # cp $value tmp/"$apifilename".json
         echo "preparing product file"
-        sed "s#API_YAML_FILE_NAME#$apiname; s#PRD_VERSION#$apiversion#g" product.tmpl > $productfile
+        sed "s#API_YAML_FILE_NAME#$apiname#g; s#API_VERSION#$apiversion#g" product.tmpl > $productfile
 
 
         echo ---------
