--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,15 +97,15 @@ jobs:
         echo $productfile
         echo $apifile
 
-        #publish_response=$(curl -sk "https://$API_HOST/api/catalogs/$ORG_NAME/$CAT_NAME/publish"\
+        publish_response=$(curl -sk "https://$API_HOST/api/catalogs/$ORG_NAME/$CAT_NAME/publish"\
         -H "Accept: application/json"\
         --compressed\
-        -H "authorization: Bearer ${{env.token}}"\
+        -H "authorization: Bearer $SESS_TOKEN"\
         -H "content-type: multipart/form-data"\
         -H "Connection: keep-alive"\
         --form "product=@$productfile;type=application/json"\
         --form "openapi=@$apifile;type=application/json"
-        #);
+        );
         
         echo $publish_response
 
