--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,6 +97,9 @@ jobs:
         echo $productfile
         echo $apifile
 
+        cat $productfile
+        cat $apifile
+
         publish_response=$(curl -sk "https://$API_HOST/api/catalogs/$ORG_NAME/$CAT_NAME/publish"\
         -H "Accept: application/json"\
         --compressed\
@@ -104,8 +107,7 @@ jobs:
         -H "content-type: multipart/form-data"\
         -H "Connection: keep-alive"\
         --form "product=@$productfile;type=application/json"\
-        --form "openapi=@$apifile;type=application/json"
-        );
+        --form "openapi=@$apifile;type=application/json");
         
         echo $publish_response
 
