--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,6 +100,8 @@ jobs:
         cat $productfile
         cat $apifile
 
+        echo "url: https://$API_HOST/api/catalogs/$ORG_NAME/$CAT_NAME/publish"
+        
         curl -sk "https://$API_HOST/api/catalogs/$ORG_NAME/$CAT_NAME/publish"\
         -H "Accept: application/json"\
         --compressed\
